--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -6,7 +6,10 @@
     </head>
     <body>
         {{> header}}
-        <p>Portfolio page here</p>
+        <p>Mike.. This is mike from the datacenter</p>
+        <p>It's friday night.. just giving you a call to see if you want comp or pay</p>
+        <p>If you want comp time.... either way give me a call</p>
+        <p>I'm trying to get this in before Joe leaves for vacation</p>
 
         {{> footer}}
     </body>
